@@ -298,6 +298,37 @@ name|input
 operator|=
 name|in
 expr_stmt|;
+comment|// SOLR-4007: temporarily substitute context class loader to allow finding dictionary resources.
+name|Thread
+name|me
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+decl_stmt|;
+name|ClassLoader
+name|cl
+init|=
+name|me
+operator|.
+name|getContextClassLoader
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|me
+operator|.
+name|setContextClassLoader
+argument_list|(
+name|PolishStemmer
+operator|.
+name|class
+operator|.
+name|getClassLoader
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|stemmer
@@ -328,6 +359,17 @@ operator|.
 name|emptyList
 argument_list|()
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|me
+operator|.
+name|setContextClassLoader
+argument_list|(
+name|cl
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|popNextLemma
 specifier|private
